keep workflow state

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -3,13 +3,15 @@
 pipeline =
     catalogsource
     removeid
+    folders
     constructor
-    schema
     uid
     datafields
 #    browser-default
-#    workflowupdater
-    workflow-history
+#    workflow-history
+    transition_inserter
+    workflowupdater
+    printer
     properties
     permissions
     owner
@@ -23,12 +25,15 @@ remote-username = ksuess
 remote-password =
 catalog-path = /www.zh.kath.ch/portal_catalog
 catalog-query =
-     {'path': {'query': '/www.zh.kath.ch/news/news-archiv', 'depth': 5},
+     {'path': {'query': '/www.zh.kath.ch/news/news-archiv-2', 'depth': 5},
       'modified': {'query': '2007/01/01', 'range': 'min'}}
 
 [removeid]
 blueprint = collective.transmogrifier.sections.manipulator
 delete = id
+
+[folders]
+blueprint = collective.transmogrifier.sections.folders
 
 [constructor]
 blueprint = collective.transmogrifier.sections.constructor
@@ -45,11 +50,26 @@ blueprint = plone.app.transmogrifier.browserdefault
 [datafields]
 blueprint = collective.jsonmigrator.datafields
 
+[workflow-history]
+blueprint = collective.jsonmigrator.workflowhistory
+
+[transition_inserter]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_transitions
+value = python:((item['_workflow_history'] and list(item['_workflow_history'].values())[0][-1]['review_state'])=='private') and 'retract' or 'publish'
+
 [workflowupdater]
 blueprint = plone.app.transmogrifier.workflowupdater
 
-[workflow-history]
-blueprint = collective.jsonmigrator.workflowhistory
+[printer]
+blueprint = collective.transmogrifier.sections.logger
+name = logger
+level = DEBUG
+delete =
+    text
+    _datafield_image
+    _datafield_file
+    _permissions
 
 [properties]
 blueprint = collective.jsonmigrator.properties
@@ -65,3 +85,6 @@ blueprint = collective.jsonmigrator.local_roles
 
 [mimetype]
 blueprint = collective.jsonmigrator.mimetype
+
+[reindex-object]
+blueprint = plone.app.transmogrifier.reindexobject
