transmogrify.dexterity.schemaupdater added

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -6,6 +6,7 @@ pipeline =
     folders
     constructor
     uid
+    schemaupdater
     datafields
 #    browser-default
 #    workflow-history
@@ -38,11 +39,11 @@ blueprint = collective.transmogrifier.sections.folders
 [constructor]
 blueprint = collective.transmogrifier.sections.constructor
 
-[schema]
-blueprint = plone.app.transmogrifier.atschemaupdater
-
 [uid]
 blueprint = plone.app.transmogrifier.uidupdater
+
+[schemaupdater]
+blueprint = transmogrify.dexterity.schemaupdater
 
 [browser-default]
 blueprint = plone.app.transmogrifier.browserdefault
