Subjects übernehmen: siehe blueprint leftovers

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -7,6 +7,7 @@ pipeline =
     constructor
     uid
     schemaupdater
+    update_leftovers
     datafields
 #    browser-default
 #    workflow-history
@@ -44,6 +45,9 @@ blueprint = plone.app.transmogrifier.uidupdater
 
 [schemaupdater]
 blueprint = transmogrify.dexterity.schemaupdater
+
+[update_leftovers]
+blueprint = rohberg.migratezhkathch4to5.leftovers
 
 [browser-default]
 blueprint = plone.app.transmogrifier.browserdefault
