Set dates: rohberg.migratezhkathch4to5.setdates

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -1,3 +1,5 @@
+# migratezhkathch4to5.cfg
+
 [transmogrifier]
 # see collective.jsonmigrator
 pipeline =
@@ -8,6 +10,7 @@ pipeline =
     uid
     schemaupdater
     update_leftovers
+    update_dates
     datafields
 #    browser-default
 #    workflow-history
@@ -49,6 +52,9 @@ blueprint = transmogrify.dexterity.schemaupdater
 [update_leftovers]
 blueprint = rohberg.migratezhkathch4to5.leftovers
 
+[update_dates]
+blueprint = rohberg.migratezhkathch4to5.setdates
+
 [browser-default]
 blueprint = plone.app.transmogrifier.browserdefault
 
@@ -69,7 +75,7 @@ blueprint = plone.app.transmogrifier.workflowupdater
 [printer]
 blueprint = collective.transmogrifier.sections.logger
 name = logger
-level = DEBUG
+level = INFO
 delete =
     text
     _datafield_image
