position in parent updater

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -11,6 +11,7 @@ pipeline =
     schemaupdater
     update_leftovers
     update_dates
+    positioninparentupdater
     datafields
 #    browser-default
 #    workflow-history
@@ -54,6 +55,9 @@ blueprint = rohberg.migratezhkathch4to5.leftovers
 
 [update_dates]
 blueprint = rohberg.migratezhkathch4to5.setdates
+
+[positioninparentupdater]
+blueprint = rohberg.migratezhkathch4to5.positioninparentupdater
 
 [browser-default]
 blueprint = plone.app.transmogrifier.browserdefault
