ftw.blueprints added. News Item to zhkathpage

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -1,15 +1,18 @@
 # migratezhkathch4to5.cfg
+# News Archiv
 
 [transmogrifier]
 # see collective.jsonmigrator
 pipeline =
     catalogsource
     removeid
+    typefieldmapper
+    typefieldmapperfolder
     folders
     constructor
     uid
     schemaupdater
-    update_leftovers
+#    update_leftovers
     update_dates
     positioninparentupdater
     datafields
@@ -18,7 +21,6 @@ pipeline =
     transition_inserter
     workflowupdater
     printer
-    properties
     permissions
     owner
     local_roles
@@ -37,6 +39,20 @@ catalog-query =
 [removeid]
 blueprint = collective.transmogrifier.sections.manipulator
 delete = id
+
+[typefieldmapper]
+blueprint = ftw.blueprints.typefieldmapper
+mapping = python: {
+        'News Item':  ('zhkathpage', {
+            'description': 'description',
+            'description': 'beschreibung_themenseite'}),
+    }
+
+[typefieldmapperfolder]
+blueprint = ftw.blueprints.typefieldmapper
+mapping = python: {
+        'Folder':  ('Folder', {}),
+    }
 
 [folders]
 blueprint = collective.transmogrifier.sections.folders
@@ -71,7 +87,7 @@ blueprint = collective.jsonmigrator.workflowhistory
 [transition_inserter]
 blueprint = collective.transmogrifier.sections.inserter
 key = string:_transitions
-value = python:((item['_workflow_history'] and list(item['_workflow_history'].values())[0][-1]['review_state'])=='private') and 'retract' or 'publish'
+value = python:item.get('_transitions', None) or (((item.get('_workflow_history', None) and list(item['_workflow_history'].values())[0][-1]['review_state'])=='private') and 'retract' or 'publish')
 
 [workflowupdater]
 blueprint = plone.app.transmogrifier.workflowupdater
