Beide Beschreibungen. Subjects

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -12,7 +12,7 @@ pipeline =
     constructor
     uid
     schemaupdater
-#    update_leftovers
+    update_leftovers
     update_dates
     positioninparentupdater
     datafields
@@ -44,8 +44,7 @@ delete = id
 blueprint = ftw.blueprints.typefieldmapper
 mapping = python: {
         'News Item':  ('zhkathpage', {
-            'description': 'description',
-            'description': 'beschreibung_themenseite'}),
+            'subject': 'subjects',}),
     }
 
 [typefieldmapperfolder]
