changed catalog-query. teaserimage_anzeigen=True

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -26,15 +26,20 @@ pipeline =
     local_roles
     mimetype
 
+# TODO change 'created' to 2017/01/01
 [catalogsource]
 blueprint = collective.jsonmigrator.catalogsource
-remote-url = http://127.0.0.1:8090
+remote-url = https://devplone.zhkath.ch/zhkath
 remote-username = ksuess
 remote-password =
 catalog-path = /www.zh.kath.ch/portal_catalog
 catalog-query =
-     {'path': {'query': '/www.zh.kath.ch/news/news-archiv-2', 'depth': 5},
-      'modified': {'query': '2007/01/01', 'range': 'min'}}
+    {
+    'created': {'query': '2017/01/01', 'range': 'min'},
+    'expired': {'query': '2019/01/01', 'range': 'max'},
+    'portal_type': ['News Item', 'Image'],
+    'path': {'query': '/www.zh.kath.ch/news/', 'depth': 10},
+    }
 
 [removeid]
 blueprint = collective.transmogrifier.sections.manipulator
