create blogauthor for every author found in a wordpress post

--- a/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
@@ -2,7 +2,7 @@
 [options]
 
 # Full path to the Wordpress WXR export file.
-filename = /Users/ksuess/Documents/Business/_Projekte/katholisch/zhkathch/Redesign_2018/Wordpress-Export-Blog-zhkathch/katholischekircheimkantonzrich.wordpress.2018-11-16_Beitraege_November.xml
+filename = /Users/ksuess/Documents/Business/_Projekte/katholisch/zhkathch/Redesign_2018/Wordpress-Export-Blog-zhkathch/katholischekircheimkantonzrich.wordpress.2018-11-17_Beiraege_Oktober2018.xml
 
 # Path, relative to the site root, of the folder where blog entries
 # should be created.
@@ -26,13 +26,15 @@ entry-selector = div.entry-content
 pipeline =
 # Parse WXR and set up a bunch of variables.
     wxrsource
+    addblogauthors
+    printer
 # Determine which content type pipeline to follow.
     splitter
 
 [splitter]
 blueprint = collective.transmogrifier.sections.splitter
 
-pipeline-post-condition = python:item['portal_type'] != 'plone.Comment'
+pipeline-post-condition = python:item.get('portal_type', False) == '${options:type}'
 pipeline-post =
 # Fetch body
     fetch_body
@@ -47,7 +49,7 @@ pipeline-post =
 # Update Dexterity schema values.
     schemaupdater
 # Update leftovers
-    printer
+# printer
     update_leftovers
 # Do workflow transitions.
     workflow
@@ -56,7 +58,7 @@ pipeline-post =
 # Make a savepoint every 10 items.
     savepoint
 
-pipeline-comment-condition = python:item['portal_type'] == 'plone.Comment'
+pipeline-comment-condition = python:item.get('portal_type', False) == 'plone.Comment'
 pipeline-comment =
 # Cleanup Wordpress-style HTML
     cleanup_text
@@ -65,6 +67,10 @@ pipeline-comment =
 # Add plone.app.discussion comment.
     addcomment
 
+pipeline-blogauthor-condition = python:item.get('portal_type', False) == 'blogauthor'
+pipeline-blogauthor =
+    constructor
+    schemaupdater
 # ---------------
 
 [wxrsource]
@@ -130,6 +136,9 @@ keys = text
 
 [addcomment]
 blueprint = transmogrify.wordpress.blueprints.comment_constructor
+
+[addblogauthors]
+blueprint = rohberg.migratezhkathch4to5.addblogauthors
 
 [printer]
 blueprint = collective.transmogrifier.sections.logger
