get author avatar

--- a/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
@@ -2,7 +2,7 @@
 [options]
 
 # Full path to the Wordpress WXR export file.
-filename = /Users/ksuess/Documents/Business/_Projekte/katholisch/zhkathch/Redesign_2018/Wordpress-Export-Blog-zhkathch/katholischekircheimkantonzrich.wordpress.2018-11-17_Beiraege_Oktober2018.xml
+filename = /Users/ksuess/Documents/Business/_Projekte/katholisch/zhkathch/Redesign_2018/Wordpress-Export-Blog-zhkathch/katholischekircheimkantonzrich.wordpress.2018-11-16_Beitraege_partiell.xml
 
 # Path, relative to the site root, of the folder where blog entries
 # should be created.
@@ -142,7 +142,7 @@ blueprint = rohberg.migratezhkathch4to5.addblogauthors
 
 [printer]
 blueprint = collective.transmogrifier.sections.logger
-name = logger
+name = my wordpress logger
 level = INFO
 delete =
     text
