--- a/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
@@ -36,6 +36,8 @@ blueprint = collective.transmogrifier.sections.splitter
 
 pipeline-post-condition = python:item.get('portal_type', False) == '${options:type}'
 pipeline-post =
+# skip unpublished
+    skip_unpublished
 # Fetch body
     fetch_body
 # Inject images
@@ -136,6 +138,11 @@ keys = text
 
 [addcomment]
 blueprint = transmogrify.wordpress.blueprints.comment_constructor
+
+
+[skip_unpublished]
+blueprint = collective.transmogrifier.sections.condition
+condition = python:item.get('_transitions', False)=='publish'
 
 [addblogauthors]
 blueprint = rohberg.migratezhkathch4to5.addblogauthors
