--- a/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
@@ -80,6 +80,7 @@ blueprint = transmogrify.wordpress.blueprints.wxrsource
 filename = ${options:filename}
 path = ${options:path}
 type = ${options:type}
+import-comments = true
 
 # Needs to:
 # - parse and update image URLs
