bug fix image_caption

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -6,6 +6,7 @@
 pipeline =
     catalogsource
     removeid
+    printer
     typefieldmapper
     typefieldmapperfolder
     folders
@@ -20,7 +21,6 @@ pipeline =
 #    workflow-history
     transition_inserter
     workflowupdater
-    printer
     permissions
     owner
     local_roles
@@ -35,7 +35,7 @@ remote-password =
 catalog-path = /www.zh.kath.ch/portal_catalog
 catalog-query =
     {
-    'created': {'query': '2017/01/01', 'range': 'min'},
+    'created': {'query': '2018/11/01', 'range': 'min'},
     'expired': {'query': '2019/01/01', 'range': 'max'},
     'portal_type': ['News Item', 'Image'],
     'path': {'query': '/www.zh.kath.ch/news/', 'depth': 10},
@@ -49,7 +49,8 @@ delete = id
 blueprint = ftw.blueprints.typefieldmapper
 mapping = python: {
         'News Item':  ('zhkathpage', {
-            'subject': 'subjects',}),
+            'subject': 'subjects',
+            'imageCaption': 'image_caption'}),
     }
 
 [typefieldmapperfolder]
