--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5_Protokolle.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5_Protokolle.cfg
@@ -73,9 +73,11 @@ delete = id
 blueprint = ftw.blueprints.typefieldmapper
 mapping = python: {
         'News Item':  ('zhkathpage', {
-            'subject': 'subjects',}),
+            'subject': 'subjects',
+            'imageCaption': 'image_caption'}),
         'Document':  ('zhkathpage', {
-            'subject': 'subjects',}),
+            'subject': 'subjects',
+            'imageCaption': 'image_caption'}),
     }
 
 [typefieldmapperzhkathch]
