--- a/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
@@ -82,6 +82,7 @@ path = ${options:path}
 type = ${options:type}
 import-comments = true
 
+
 # Needs to:
 # - parse and update image URLs
 # - set path, portal_type
@@ -151,6 +152,18 @@ blueprint = rohberg.migratezhkathch4to5.addblogauthors
 [printer]
 blueprint = collective.transmogrifier.sections.logger
 name = my wordpress logger
+level = INFO
+delete =
+    text
+    image
+    _datafield_image
+    _datafield_file
+    _permissions
+
+
+[printer2]
+blueprint = collective.transmogrifier.sections.logger
+name = my second wordpress logger
 level = INFO
 delete =
     text
