--- a/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/wordpress.cfg
@@ -2,7 +2,7 @@
 [options]
 
 # Full path to the Wordpress WXR export file.
-filename = /Users/ksuess/Documents/Business/_Projekte/katholisch/zhkathch/Redesign_2018/Migration/Blog/Wordpress-Export-Blog-zhkathch/katholischekircheimkantonzrich.wordpress.2018-11-16_Beitraege_partiell.xml
+filename = /usr/local/relaunch2018/plone_zhkath/katholischekircheimkantonzrich.wordpress.2019-02-16.xml
 
 # Path, relative to the site root, of the folder where blog entries
 # should be created.
