Bug fix dates. bug fix blog companyposition.

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -38,7 +38,7 @@ catalog-query =
     'created': {'query': '2017/01/01', 'range': 'min'},
     'expired': {'query': '2020/01/01', 'range': 'max'},
     'portal_type': ['News Item', 'Image'],
-    'path': {'query': '/www.zh.kath.ch/news/', 'depth': 10},
+    'path': {'query': '/www.zhkath.ch/news/', 'depth': 10},
     }
 
 [removeid]
