Migration restlicher Blog-Posts seit letzter Migration im Februar

--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathch4to5.cfg
@@ -35,10 +35,10 @@ remote-password =
 catalog-path = /www.zh.kath.ch/portal_catalog
 catalog-query =
     {
-    'created': {'query': '2017/01/01', 'range': 'min'},
+    'created': {'query': '2019/01/01', 'range': 'min'},
     'expired': {'query': '2020/01/01', 'range': 'max'},
     'portal_type': ['News Item', 'Image'],
-    'path': {'query': '/www.zhkath.ch/news/', 'depth': 10},
+    'path': {'query': '/www.zh.kath.ch/news/', 'depth': 10},
     }
 
 [removeid]
