--- a/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathchwordpress.cfg
+++ b/src/rohberg/migratezhkathch4to5/pipelines/migratezhkathchwordpress.cfg
@@ -2,7 +2,9 @@
 [options]
 
 # Full path to the Wordpress WXR export file.
-filename = /usr/local/relaunch2018/plone_zhkath/katholischekircheimkantonzrich.wordpress.2019-02-16.xml
+filename = /usr/local/relaunch2018/plone_zhkath/filename.xml
+filename = /Users/ksuess/Documents/Business/_Projekte/katholisch/zhkathch/Redesign_2018/Migration/Blog/Wordpress-Export-Blog-zhkathch/katholischekircheimkantonzrich.WordPress.2019-05-20.xml
+filename = /usr/local/relaunch2018/plone_zhkath/katholischekircheimkantonzrich.WordPress.2019-05-20.xml
 
 # Path, relative to the site root, of the folder where blog entries
 # should be created.
